--- a/location.html
+++ b/location.html
@@ -5,15 +5,41 @@
   body {
   background-color: blue;
 	}
-	img
+	img {
+	position: absolute;
+	top: 0; bottom: 0; left: 0; right: 0;
+	margin: auto;
+	}
+	p {
+		text-align: center;
+		font-size: 2em;
+		font-family: Comic Sans MS; 
+		color: red;
+	}
+	a {
+		text-align: center;
+		position: center;	
+	}
+	
+
 </style>
-	<title>wWere am I?</title>
+	<title>Where Am I?</title>
 </head>
 <body>
-<a href="https://www.google.com/maps/place/South+Bronx,+Bronx,+NY+10455/data=!4m2!3m1!1s0x89c2f5ced4dc3487:0x81f84f13cf2ba594?sa=X&sqi=2&ved=0ahUKEwjwiabXz4LPAhVMNz4KHR7UCgIQ8gEIGzAA"><img src="cbk.jpg"></a>
-<a href="About me.html">About me</a>
+ <p>
+ 	This is Where I live<br>
+ 	383 East 143rd street<br>
+
+ 	<a href="About me.html">About me</a>
 <a href="index.html">Index</a>
 <a href="resume.html">Resume</a>
+<a href="my website.html">form</a>
+</p>
+ 
+<a href="https://www.google.com/maps/place/South+Bronx,+Bronx,+NY+10455/data=!4m2!3m1!1s0x89c2f5ced4dc3487:0x81f84f13cf2ba594?sa=X&sqi=2&ved=0ahUKEwjwiabXz4LPAhVMNz4KHR7UCgIQ8gEIGzAA"><img src="cbk.jpg">
+</a>
+
+
 </body>
 
 </html>
