--- a/my website.html
+++ b/my website.html
@@ -39,5 +39,6 @@
          <input type="text" name="lastname"> <br>
          <input type="button" name="submit" value="submit">
     </form>
+    <h3> <a href="About me.html">About me</a> | <a href="location.html">Location</a> ||<a href="resume.html">Resume</a> </h3>
 </body>
 </html>
