--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,11 @@
          ul {
           text-align: left;
          }
-      </style>                                      
+      </style>
+      <a href="index.html">Index</a>|
+    <a href="About me.html">About me</a>|
+    <a href="location.html">Location</a>| 
+    <a href="my website.html">form</a>                                      
 <h1>Kasaun Fryson</h1>
 <h2>383 East 143rd Street   New York, NY 10454 <br>
 Cell: 646-424-0327  E-mail: frysonkasaun@gmail.com<br>  LinkedIn:  http://www.linkedin.com/in/KasaunFryson</body</h2>
@@ -85,6 +89,7 @@ ACTIVITIES
 <li>Selected to participate in Playable Fashion Program at Eyebeam Art and Technolgy Center- Built and Programmed Controller Glove</li>
 <li>Chosen to be a part of documentary film on students participating in Technology Workforce at New York Foundling</li>
 </ul>
- 
+<br>
+
 </body>
 </html>
